samples/_failures_safe/1761302614_498a8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9ddceb8.c: In function ‘main’:
./samples/SAFE/__tmp_b9ddceb8.c:152:5: error: expected expression at end of input
  152 |     int display_count = (entry_count <
      |     ^~~
./samples/SAFE/__tmp_b9ddceb8.c:152:5: error: expected declaration or statement at end of input
